// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Artifact Trigger Config Panel  tests Renders/snapshots edit render 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main artifactTriggerConfigContainer StyledProps--padding-xxlarge"
        >
          <span
            class="StyledProps--font StyledProps--main formContentTitle StyledProps--inline"
            data-tooltip-id="artifactManifestLabel"
          >
            pipeline.triggers.triggerConfigurationLabel
            
          </span>
          <div
            class="formContent"
          >
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="artifactTriggerConfigPanel_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="artifactTriggerConfigPanel_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="common.namePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                  data-tooltip-id="artifactTrigger_description"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="description-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                  data-tooltip-id="artifactTrigger_tags"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="tags-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <span
            class="StyledProps--font StyledProps--main formContentTitle StyledProps--inline"
            data-tooltip-id="listenOnNewArtifactManifest"
          >
            pipeline.triggers.artifactTriggerConfigPanel.listenOnNewArtifact
          </span>
          <div
            class="formContent"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="display: inline-block; width: 100%;"
            >
              <div
                class="table appliedArtifact"
              >
                <div
                  class="header"
                  role="row"
                >
                  <div
                    class="cell"
                    colspan="1"
                    role="columnheader"
                    style="width: 45%;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      MANIFESTSTEXT
                    </p>
                  </div>
                  <div
                    class="cell"
                    colspan="1"
                    role="columnheader"
                    style="width: 25%;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      PIPELINE.TRIGGERS.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
                    </p>
                  </div>
                  <div
                    class="cell"
                    colspan="1"
                    role="columnheader"
                    style="width: 18%;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      COMMON.LOCATION
                    </p>
                  </div>
                  <div
                    class="cell"
                    colspan="1"
                    role="columnheader"
                    style="width: 10%;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                       
                    </p>
                  </div>
                </div>
                <div
                  class="body"
                >
                  <div
                    class="row card clickable"
                    role="row"
                  >
                    <div
                      class="cell"
                      role="cell"
                      style="width: 45%;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main"
                          style="--text-line-clamp: 1; width: 296px;"
                        >
                          stage: s3manifestid
                        </p>
                      </div>
                    </div>
                    <div
                      class="cell"
                      role="cell"
                      style="width: 25%;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main"
                          style="--text-line-clamp: 1; width: 159px;"
                        >
                          pipeline.triggers.artifactTriggerConfigPanel.runtimeInput
                        </p>
                      </div>
                    </div>
                    <div
                      class="cell"
                      role="cell"
                      style="width: 18%;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main"
                          style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
                        >
                          chartPath
                        </p>
                      </div>
                    </div>
                    <div
                      class="cell"
                      role="cell"
                      style="width: 10%;"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                        style="justify-content: center;"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                          data-name="select-artifact-edit"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-edit StyledProps--main"
                            icon="edit"
                          >
                            <svg
                              data-icon="edit"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                edit
                              </desc>
                              <path
                                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                          data-name="main-delete"
                          style="display: inline-block;"
                          type="button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="main-trash"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 24 24"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M5.143 9.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.194 1.079H7.717a1.2 1.2 0 01-1.189-1.04L5.143 9.48zm11.837-.16H6.332l1.385 10.207h8.225l1.04-10.207zM9.916 2.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L15 5.179l3.86.882a.6.6 0 01-.267 1.17L5.535 4.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M12 11.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 01-.996.087l-.436-4.98a.5.5 0 01.455-.542zm5.523 0a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Artifact Trigger Config Panel  tests Renders/snapshots inital Render 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main artifactTriggerConfigContainer StyledProps--padding-xxlarge"
        >
          <span
            class="StyledProps--font StyledProps--main formContentTitle StyledProps--inline"
            data-tooltip-id="artifactManifestLabel"
          >
            pipeline.triggers.triggerConfigurationLabel
            : pipeline.triggers.onNewArtifactTitle
          </span>
          <div
            class="formContent"
          >
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="artifactTriggerConfigPanel_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="artifactTriggerConfigPanel_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="common.namePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                  data-tooltip-id="artifactTrigger_description"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="description-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                  data-tooltip-id="artifactTrigger_tags"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="tags-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <span
            class="StyledProps--font StyledProps--main formContentTitle StyledProps--inline"
            data-tooltip-id="listenOnNewArtifactManifest"
          >
            pipeline.triggers.artifactTriggerConfigPanel.listenOnNewArtifact
          </span>
          <div
            class="formContent"
          >
            <label
              class="Label--main"
              data-tooltip-id="artifactManifestLabel"
              style="font-size: 13px; font-weight: normal;"
            >
              manifestsText
            </label>
            <p
              class="StyledProps--font StyledProps--main"
              data-name="plusAdd"
              style="cursor: pointer; width: 130px;"
            >
              pipeline.triggers.artifactTriggerConfigPanel.plusSelect
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
